# MTProxyMaxPy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile.test  Makefile  README.md  docker-compose.yml  install.sh  mtproxymax.sh  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: build-engine.yml
src/mtproxymaxpy/: __main__.py  backup.py  cli.py  constants.py  doctor.py  geoblock.py  metrics.py  process_manager.py  systemd.py  telegram_bot.py  telegram_bot_aiogram.py  telegram_messages.py
src/mtproxymaxpy/config/: instances.py  migration.py  secrets.py  settings.py  upstreams.py
src/mtproxymaxpy/tui/: app.py  menu.py
src/mtproxymaxpy/tui/screens/: main_menu.py  migration_screen.py  secrets_screen.py  settings_screen.py  status_screen.py  upstreams_screen.py
src/mtproxymaxpy/tui/widgets/: proxy_link.py  status_box.py  traffic_chart.py
src/mtproxymaxpy/utils/: formatting.py  network.py  proxy_link.py  system.py  validation.py
tests/: conftest.py  docker_test.sh  test_backup.py  test_cli_commands.py  test_config_extras.py  test_doctor_systemd.py  test_entry_network_system.py  test_geoblock.py  test_imports.py  test_metrics.py  test_migration.py  test_migration_systemd_extra.py  test_process_manager.py  test_secrets.py  test_settings.py  test_systemd_extra.py  test_telegram_bot.py  test_telegram_bot_aiogram.py  test_telegram_bot_commands.py  test_telegram_bot_extra.py  test_telegram_messages.py  test_tui_logs_traffic.py  test_tui_menu_actions.py  test_tui_menu_admin.py  test_tui_menu_flows.py  test_tui_menu_helpers.py  test_tui_screens_widgets.py  test_tui_update_setup_extra.py  test_upstreams.py  test_utils.py  test_utils_proxy_extra.py
