[project]
name = "mtproxymaxpy"
version = "1.0.0"
description = "MTProto proxy management platform"
requires-python = ">=3.13"
dependencies = [
    "rich>=13.0",
    "psutil>=5.9",
    "pydantic>=2.7",
    "aiogram>=3.26,<4",
    "httpx>=0.27",
    "typer>=0.12",
    "tomli-w>=1.0",
    "qrcode>=7.4",
]

[project.scripts]
mtproxymaxpy = "mtproxymaxpy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtproxymaxpy"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pre-commit>=3.8",
    "pytest>=8",
    "pytest-cov>=5",
    "pytest-mock>=3.14",
    "ruff>=0.15.10",
    "types-qrcode>=8.2.0.20260408",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--cov=mtproxymaxpy",
    "--cov-report=term-missing",
    "--cov-branch",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src/mtproxymaxpy"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 2

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.13"

warn_redundant_casts = true   # Предупреждает об избыточных cast(), которые ничего не меняют
warn_unused_ignores = true    # Предупреждает о комментариях # type: ignore, которые уже не нужны
warn_no_return = true         # Предупреждает, если функция может завершиться без return
warn_return_any = true        # Предупреждает, если функция возвращает Any в типизированном контексте
warn_unreachable = true       # Предупреждает о недостижимом коде

[tool.ruff]
target-version = "py313"
line-length = 150
indent-width = 4
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    #"B",
    # flake8-simplify
    #"SIM",
    # isort
    "I",
]
ignore = ["E741"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
